--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,5 @@ sentence-transformers==2.2.2
 torch==2.1.0
 huggingface_hub==0.14.1
 requests
+fuzzywuzzy
+python-Levenshtein  # Required for fuzzywuzzy
